--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-!DOCTYPE html
-html
-head
-  meta charset=utf-8
-  meta name=viewport content=width=device-width
-  titleHola Mundotitle
-head
-body
-H1hola mundoH1
-body
-html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Hola Mundo</title>
+</head>
+<body>
+<H1>hola mundo<H1>
+</body>
+</html>
