--- a/timeline.html
+++ b/timeline.html
@@ -6,6 +6,6 @@
   <title>Hola Mundo</title>
 </head>
 <body>
-<iframe src='https://cdn.knightlab.com/libs/timeline/latest/embed/?source=1cWqQBZCkX9GpzFtxCWHoqFXCHg-ylTVUWlnrdYMzKUI&font=Bevan-PotanoSans&maptype=toner&width=600&height=600' width='600' height='600' frameborder='0'></iframe>
-</body>
+<iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1x4vLAXXy-3PDOkKVC3qtmlaZrGHKY_EJLR73iv5oCuM&font=Default&lang=es&start_at_end=true&initial_zoom=4&start_at_slide=3&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>
+</body>  
 </html>
