--- a/mom2019w32-2.html
+++ b/mom2019w32-2.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <H1> Power BI </H1>
-<img src="CARBON.png" img>
+<iframe width="680" height="510" src="https://app.blob.core.windows.net/embed/snapshotEmbedHost.html?embedId=eyJjdWx0dXJlSW5mbyI6ImVzIn0=&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
 </body>
 </html>
