--- a/mom2019w32-2.html
+++ b/mom2019w32-2.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <H1> Power BI </H1>
-<iframe width="680" height="510" src="https://app.powerbi.com/reportEmbed?reportId=3130ea55-3243-4aeb-9a20-0f288bf9e63b&autoAuth=true&ctid=90edd0cd-723b-4246-9c35-a8c68cccd006&config=eyJjbHVzdGVyVXJsIjoiaHR0cHM6Ly93YWJpLXNvdXRoLWNlbnRyYWwtdXMtcmVkaXJlY3QuYW5hbHlzaXMud2luZG93cy5uZXQifQ%3D%3D"></iframe>
+<iframe width="680" height="510" src="https://app.blob.core.windows.net/embed/snapshotEmbedHost.html?embedId=eyJjdWx0dXJlSW5mbyI6ImVzIn0=&pageName=ReportSection" frameborder="0" allowFullScreen="true"></iframe>
 </body>
 </html>
