--- a/mom2019w33-2.html
+++ b/mom2019w33-2.html
@@ -6,7 +6,7 @@
   <title>Graficos de makeovermonday w33 2019</title>
 </head>
 <body>
-<H1> Cantidad de gente en los experimientos. </H1>
+<H1> Cantidad de gente en los experimientos. Carrera de barras! </H1>
 <div class="flourish-embed" data-src="visualisation/602260"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
 </body>
 </html>
