--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
           <a href="https://rpicchi.github.io/infovis/timeline.html"> <H3>Timeline: Historia de los espectáculos de Les Luthiers</H3></a>
         </li>
         <li>
-          <a href="https://rpicchi.github.io/infovis/mom2019w32-1.html"><H3>Makeover Monday 2019 Semana 32 -Tableau</H3></a>
+          <a href="https://rpicchi.github.io/infovis/stdbars.html"> <H3>Makeover Monday 2019 Semana 31 - Gráfico de barras en d3.js</H3></a>
+        </li>
+        <li>
+          <a href="https://rpicchi.github.io/infovis/mom2019w32-1.html"><H3>Makeover Monday 2019 Semana 32 - Tableau</H3></a>
         </li>
         <li>
           <a href="https://rpicchi.github.io/infovis/mom2019w32-2.html"><H3>Makeover Monday 2019 Semana 32 - Power BI</H3></a>
