--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width">
   <title> ITBA - DIPLOMATURA EN BIG DATA - VISUALIZACION </title>
 </head>
-
-  
+  <STYLE>
+  H1.alumno_profe {text-align: right}
+ </STYLE>
+ 
   
 <body>
   <H1>ITBA </H1>
@@ -36,6 +38,8 @@
         </li>    
       </ul>
     </div>  
+  <H1 class="alumno_profe"> Profesor: Ariel Aizemberg</H1>
+  <H1 class="alumno_profe"> Alumno: Rafael Picchi</H1>
 
 </body>
 </html>
