--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title> ITBA - DIPLOMATURA EN BIG DATA - VISUALIZACION </title>
+  <title>ITBA - DIPLOMATURA EN BIG DATA - VISUALIZACION</title>
 </head>
-  <STYLE>
-  H1.alumno_profe {text-align: right}
- </STYLE>
- 
-  
+  <style>
+  H2.alumno_profe {text-align: center}
+    
+ </style>
 <body>
   <H1>ITBA </H1>
   <H1>DIPLOMATURA EN BIG DATA</H1>
