--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
   <meta name="viewport" content="width=device-width">
   <title>ITBA - DIPLOMATURA EN BIG DATA - VISUALIZACION</title>
 </head>
-  <style>
-  H2.alumno_profe {text-align: center}
-    
- </style>
 <body>
-  <H1>ITBA </H1>
-  <H1>DIPLOMATURA EN BIG DATA</H1>
-  <H1>VISUALIZACION - 2019 </H1>
- 
- <h2>Visualizaciones</h2>
+  
+  <H1 align="center">DIPLOMATURA EN BIG DATA</H1>
+  <H1 align="center">VISUALIZACION - 2019 </H1>
+ <H1 align="center"> ITBA </H1>
+ <h2>Visualizaciones: </h2>
     <div style="font-size:14px;">
       <ul>
         <li>
@@ -37,8 +33,8 @@
         </li>    
       </ul>
     </div>  
-  <H2 class="alumno_profe"> Profesor: Ariel Aizemberg</H2>
-  <H2 class="alumno_profe"> Alumno: Rafael Picchi</H2>
+  <H2 align="right"> Profesor: Ariel Aizemberg</H2>
+  <H2 align="right"> Alumno: Rafael Picchi</H2>
 
 </body>
 </html>
