--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </li>    
       </ul>
     </div>  
-  <H2 align="right"> Profesor: Ariel Aizemberg</H2>
-  <H2 align="right"> Alumno: Rafael Picchi</H2>
+  <H2 align="center"> Profesor: Ariel Aizemberg</H2>
+  <H2 align="center"> Alumno: Rafael Picchi</H2>
 
 </body>
 </html>
