--- a/mom2019w32-2.html
+++ b/mom2019w32-2.html
@@ -6,7 +6,7 @@
   <title>Graficos de makeovermonday w32 2019</title>
 </head>
 <body>
-<H1> Power BI </H1>
+<H1> Aportes de lo sdistintos tipos de energía - Hecho con Power BI (IMAGEN INCRUSTADA) </H1>
 <img src="CARBON.png" img>
 </body>
 </html>
