--- a/stdbars.html
+++ b/stdbars.html
@@ -7,7 +7,7 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
 <body>
-
+  <H1>Cantidad de casos por enfermedad - Grafico de barras en d3.js </H1>
  <div id="vis"></div>
   
  <script>
