--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <li>
           <a href="https://rpicchi.github.io/infovis/mom2019w33-2.html"><H3>Makeover Monday 2019 Semana 33 - Flourish</H3></a>
         </li>    
+        <li>
+          <a href="https://rpicchi.github.io/infovis/mom2019w34-1.html"><H3>Makeover Monday 2019 Semana 34 - Flourish</H3></a>
+        </li>    
       </ul>
     </div>  
         <br>
